<?xml version="1.0" encoding="utf-8"?>

<resources>
  <string name="app_name">Health Android Example</string>

  <!-- Common strings -->
  <string name="save">Save</string>
  <string name="cancel">Cancel</string>
  <string name="ok">OK</string>

  <!-- Main activity button and menu option strings -->
  <string name="new_result">New Result</string>
  <string name="refresh_results">Refresh Results</string>
  <string name="choose_account">Choose Account</string>
  <string name="choose_profile">Choose Profile</string>
  <string name="delete_results">Delete Result</string>

  <!-- Main activity dashboard buttons -->
  <string name="account">Account</string>
  <string name="profile">Profile</string>

  <!-- Add result activity view string -->
  <string name="add_result_title">Add Result</string>
  <string name="add_result_type">Type</string>
  <string name="add_result_value">Value</string>
  <string name="add_result_date">Date</string>
  <string name="add_result_units">units</string>

  <!-- Google account selection -->
  <string name="no_account_found_title">No Account Found</string>
  <string name="no_account_found">No account found on device for connecting to
    Google services.</string>
  <string name="choose_account_title">Choose Account</string>

  <!-- Health profile selection -->
  <string name="choose_profile_title">Choose Health Profile</string>

  <!-- Progress dialog text -->
  <string name="loading">Loading... Please wait.</string>

  <!-- Network error dialog strings -->
  <string name="connection_error_title">Connection Error</string>
  <string name="connection_error_message">Unable to connect to Google Health service. Please
  check your network connection and try again.</string>

  <!-- Health notice dialog text -->
  <string name="health_notice">If you have not yet enabled your Google Health
    account, any data uploaded by this application will be held at
    Google until you do so. To enable your account and view your data,
    just go to https://health.google.com and sign in.</string>

  <!-- Unavailable data notices -->
  <string name="no_test_results">No test results in Health profile</string>
</resources>
