<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">

  <RelativeLayout
    android:background="#cccccc"
    android:layout_alignParentBottom="true"
    android:layout_height="37dp"
    android:layout_width="fill_parent"
    android:orientation="horizontal"
    android:paddingLeft="3px"
    android:paddingRight="3px"
    android:paddingTop="5px">
    <Button
      android:id="@+id/main_accounts"
      android:layout_alignParentLeft="true"
      android:layout_height="wrap_content"
      android:layout_width="wrap_content"
      android:text="@string/account"
      android:textSize="12sp"/>
    <Button
      android:id="@+id/main_profiles"
      android:layout_alignParentRight="true"
      android:layout_height="wrap_content"
      android:layout_width="wrap_content"
      android:text="@string/profile"
      android:textSize="12sp"/>
  </RelativeLayout>
  <ListView
    android:layout_width="fill_parent"
    android:id="@+id/main_results"
    android:layout_height="wrap_content"
    android:layout_weight="1"/>
  <RelativeLayout
    android:layout_alignParentBottom="true"
    android:layout_height="50dp"
    android:layout_width="fill_parent"
    android:orientation="horizontal"
    android:paddingRight="15px"
    android:paddingLeft="15px">
    <Button
      android:id="@+id/main_new_result"
      android:layout_alignParentLeft="true"
      android:layout_height="wrap_content"
      android:layout_width="wrap_content"
      android:text="@string/new_result"
      android:textSize="12sp"/>
    <Button
      android:id="@+id/main_refresh"
      android:layout_alignParentRight="true"
      android:layout_height="wrap_content"
      android:layout_width="wrap_content"
      android:text="@string/refresh_results"
      android:textSize="12sp"/>
  </RelativeLayout>
</LinearLayout>
